--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
 		"prepare": "husky"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.15.13",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/aos": "^3.0.7",
-		"@types/eslint": "^8.56.10",
-		"@typescript-eslint/eslint-plugin": "^7.16.0",
-		"@typescript-eslint/parser": "^7.16.0",
-		"aos": "2.3.1",
-		"bootstrap": "4.4.1",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.42.0",
-		"husky": "^9.0.11",
-		"lint-staged": "^15.2.7",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5",
-		"sass": "1.22.9",
-		"svelte": "^4.2.18",
-		"svelte-check": "^3.8.4",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
-		"vite": "^5.3.3",
-		"vite-plugin-iso-import": "^1.1.0",
-		"vitest": "^1.6.0"
+		"@types/eslint": "^8.56.12",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"aos": "^2.3.4",
+		"bootstrap": "^4.6.2",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^9.1.2",
+		"eslint-plugin-svelte": "^2.46.1",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.2",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"sass": "^1.93.3",
+		"svelte": "^4.2.20",
+		"svelte-check": "^3.8.6",
+		"tslib": "^2.8.1",
+		"typescript": "^5.9.3",
+		"vite": "^5.4.21",
+		"vite-plugin-iso-import": "^1.3.0",
+		"vitest": "^1.6.1"
 	},
 	"type": "module",
 	"lint-staged": {
