--- a/package.json
+++ b/package.json
@@ -14,30 +14,32 @@
 		"prepare": "husky"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-static": "^3.0.10",
-		"@sveltejs/kit": "^2.15.13",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/kit": "^2.48.4",
+		"@sveltejs/vite-plugin-svelte": "^5.0.2",
 		"@types/aos": "^3.0.7",
-		"@types/eslint": "^8.56.12",
-		"@typescript-eslint/eslint-plugin": "^7.18.0",
-		"@typescript-eslint/parser": "^7.18.0",
+		"@types/eslint": "^9.6.1",
+		"@typescript-eslint/eslint-plugin": "^8.46.3",
+		"@typescript-eslint/parser": "^8.46.3",
 		"aos": "^2.3.4",
 		"bootstrap": "^4.6.2",
-		"eslint": "^8.57.1",
-		"eslint-config-prettier": "^9.1.2",
-		"eslint-plugin-svelte": "^2.46.1",
+		"eslint": "^9.39.1",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.13.0",
+		"globals": "^16.5.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.5.2",
+		"lint-staged": "^16.2.6",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"sass": "^1.93.3",
-		"svelte": "^4.2.20",
-		"svelte-check": "^3.8.6",
+		"svelte": "^5.43.4",
+		"svelte-check": "^4.3.3",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"vite": "^5.4.21",
+		"vite": "^6.0.7",
 		"vite-plugin-iso-import": "^1.3.0",
-		"vitest": "^1.6.1"
+		"vitest": "^4.0.7"
 	},
 	"type": "module",
 	"lint-staged": {
